# haven-overlay

./: .gitignore  FINDINGS.md  GEMINI.md  LICENSE  README.md  haven-overlay.xml  haven.xml
acct-group/ai-compressor/: Manifest  ai-compressor-0.ebuild  metadata.xml
acct-group/airsonic/: Manifest  airsonic-0.ebuild
acct-group/android-studio/: Manifest
acct-group/apache-hadoop-common/: Manifest
acct-group/artifactory-bin/: Manifest
acct-group/artifactory-pro-bin/: Manifest
acct-group/audiobookshelf/: audiobookshelf-0.ebuild  metadata.xml
acct-group/cockpit-ws/: Manifest  cockpit-ws-0.ebuild
acct-group/cockpit-wsinstance/: Manifest  cockpit-wsinstance-0.ebuild
acct-group/cortex/: Manifest  cortex-0.ebuild
acct-group/davmail/: Manifest
acct-group/dendrite/: dendrite-0.ebuild
acct-group/dependency-check/: dependency-check-0.ebuild
acct-group/docker-updater/: docker-updater-0.ebuild
acct-group/emby-server/: Manifest
acct-group/gerrit-bin/: Manifest
acct-group/grype/: grype-0.ebuild
acct-group/headphones/: Manifest
acct-group/hermes-webui/: hermes-webui-0.ebuild
dev-python/jc-mcp/files/: jc_mcp.py  pyproject.toml
eclass/: bun.eclass  go-module-offline.eclass  golang-base.eclass  golang-common.eclass  golang-live.eclass  golang-single.eclass  golang-vcs-snapshot.eclass  kernel-geek.eclass  lua.eclass  npm.eclass  yarn.eclass
licenses/: NFTC
metadata/: layout.conf
profiles/: categories  package.mask  package.move  package.unmask  packages.unmask  repo_name  use.local.desc
scripts/: npm2ebuild.py  verify-mcp.sh  verify-npm-bin.sh
(+9458 files in other folders)
